force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/NEILON__Amazon_S3_File_Migration_Report__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to store logs for Salesforce to Amazon S3 file migration.</description>
    <label>S3-Link File Migration Log</label>
    <nameField>
        <displayFormat>FML-{0000000}</displayFormat>
        <label>S3-Link File Migration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3-Link File Migration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>