force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Account__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>