force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Asset__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>