force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Case__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>