force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>