force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Lead__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>