force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Manual_File_Migration_Link__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Manual_File_Migration_Link__c</fullName>
    <label>Manual File Migration URL</label>
    <type>Url</type>
</CustomField>