force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Parent_Object_API_Name__c</fullName>
    <label>Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>