force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Product2__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>