force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__S3_File__c.field-meta.xml
<CustomField>
    <fullName>NEILON__S3_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>S3-File</label>
    <referenceTo>NEILON__File__c</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>