force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Salesforce_File_Extension__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_File_Extension__c</fullName>
    <label>Salesforce File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>