force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Salesforce_File_Id__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Salesforce_File_Id__c</fullName>
    <label>Salesforce File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>