force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__Solution__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>