force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/fields/NEILON__User__c.field-meta.xml
<CustomField>
    <fullName>NEILON__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Amazon_S3_File_Migration_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>