force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/listViews/NEILON__All.listView-meta.xml
<ListView>
    <fullName>NEILON__All</fullName>
    <columns>NAME</columns>
    <columns>NEILON__Salesforce_File_Title__c</columns>
    <columns>NEILON__Salesforce_File_Size__c</columns>
    <columns>NEILON__Salesforce_File_Id__c</columns>
    <columns>NEILON__S3_File__c</columns>
    <columns>NEILON__Manual_File_Migration_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>