force-app/main/default/objects/NEILON__Amazon_S3_File_Migration_Report__c/listViews/NEILON__File_Size_400MB.listView-meta.xml
<ListView>
    <fullName>NEILON__File_Size_400MB</fullName>
    <columns>NAME</columns>
    <columns>NEILON__Salesforce_File_Title__c</columns>
    <columns>NEILON__Salesforce_File_Size__c</columns>
    <columns>NEILON__Salesforce_File_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NEILON__Salesforce_File_Size__c</field>
        <operation>greaterThan</operation>
        <value>403967604</value>
    </filters>
    <filters>
        <field>NEILON__S3_File__c</field>
        <operation>equals</operation>
    </filters>
    <label>File Size &gt; 400MB</label>
</ListView>